C: sombra en imagen y ajustes adicionales

--- a/.classpath
+++ b/.classpath
@@ -6,17 +6,22 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Java_FX">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/Java_FX">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/java fx">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/java fx">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/java_fx">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
